[project]
name = "llm-train-scripts-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    # --- Core ML/DL Frameworks ---
    "torch>=2.1",
    # --- Hugging Face Ecosystem ---
    "transformers[chat,serving]>=4.38,<5",
    "rich",
    "datasets>=2.18",
    "peft>=0.9",
    "accelerate>=0.27",
    # --- Custom/High-Performance Components ---
    "schedulefree",
    "flash-attn>=2.5.0",
    "liger-kernel",
    # --- Utilities & Logging ---
    "tensorboard",
    "wandb",
    "tqdm",
    "pandas",
    "tiktoken",
    "sentencepiece",
]

[tool.uv.sources]
torch = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.extra-build-variables]
"flash_attn" = { TORCH_CUDA_ARCH_LIST = "9.0", FLASH_ATTN_CUDA_ARCHS = "90", MAX_JOBS = "64" }